2015-05-24  6.9.1-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-3, SVN revision 18623.

2015-05-03  6.9.1-3 Dirk Lemstra <dirk@lem.....org>
  * Fixed transparency issue with 16-bit tga files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27469).
  * Fixed writing label and comment in tiff images (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25516).
  * Jpeg images no longer have pixels per inch as a default value for density
    units when the density is not set (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27589).
  * Added support for setting the font color with -fill to the pango coder.

2015-05-03  6.9.1-3 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed bug with "-define png:format=x" in png.c, introduced in version
    6.8.9-0, that caused the define to be ignored.
  * Replaced some dead code in ReadJNGImage with an assert().
  * Avoid palette-building when writing a grayscale PNG (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27580).

2015-04-20  6.9.1-3 Cristy  <quetzlzacatenango@image...>
  * Support -define compose:clamp=false option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26946).
  * Don't extend any user supplied image buffer in SeekBlob() (bug report
    from a.chernij@corp...).
  * Improved reproducible builds (reference
    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=783933).
  * Draw a rectangle of width & height of 1 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24874).

2015-04-19  6.9.1-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-2, SVN revision 18429.

2015-04-09  6.9.1-2 Glenn Randers-Pehrson <glennrp@image...>
  * Avoid using a NULL alpha_image or color_image in the JNG decoder.

2015-04-07  6.9.1-2 Cristy  <quetzlzacatenango@image...>
  * Fix JPEG-2000 transparency on write (reference