@@ -1,3 +1,6 @@
+2015-05-25  6.9.1-4 Dirk Lemstra <dirk@lem.....org>
+  * Added support for reading a user supplied layer mask in PSD files.
+
 2015-05-24  6.9.1-3 Cristy  <quetzlzacatenango@image...>
   * New version 6.9.1-3, SVN revision 18623.
 
